# gobang-rs

./: .gitignore  Cargo.toml  README.md  gobang-rs.d.ts  gobang-rs.js  gobang-rs_bg.wasm  gobang-rs_bg.wasm.d.ts  index.html
.cargo/: config.toml
.github/workflows/: deploy.yml
src/: ai.rs  gui.rs  main.rs
web/: index.html
