[package]
name = "gobang-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.32.3"
egui = "0.32.3"
lazy_static = "1.5.0"
log = "0.4.28"
rand = "0.9.2"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread", "sync"] }
env_logger = "0.11"

[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio = { version = "1.47.1", features = ["macros", "rt", "sync"] }
wasm-bindgen = "0.2.104"
wasm-bindgen-futures = "0.4"
web-sys = "0.3.70"
getrandom = { version = "0.3", features = ["wasm_js"] }

[profile.release]
opt-level = 2
